--- a/amap/package.json
+++ b/amap/package.json
@@ -14,13 +14,15 @@
     "stylus": "0.54.5"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "history": "4.7.2",
     "re-base": "3.2.0",
-    "react": "16.2.0",
+    "react": "^16.2.0",
     "react-addons-css-transition-group": "15.6.2",
-    "react-dom": "16.2.0",
+    "react-dom": "^16.2.0",
     "react-router": "4.2.0",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "reactstrap": "^5.0.0-beta"
   },
   "scripts": {
     "start": "react-scripts start",
